--- a/src/components/shared/Counter/Counter.css
+++ b/src/components/shared/Counter/Counter.css
@@ -4,6 +4,12 @@
 	align-items: center;
 }
 
+@media (min-width: 576px) {
+	.Counter {
+		align-items: flex-start;
+	}
+}
+
 .Counter-Button {
 	margin: 0;
 	padding: 0.227rem 0.495rem 0.33rem;
